// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action defaultValue should fill in provided default value 1`] = `
Object {
  "data": Object {
    "someAction": Object {
      "result": Object {
        "value": 2000,
      },
    },
  },
}
`;

exports[`Action defaultValue should fill in provided default values in nested input objects 1`] = `
Object {
  "data": Object {
    "someAction": Object {
      "result": Object {
        "value": 2000,
      },
    },
  },
}
`;

exports[`Action isAction should recognize non-Action objects 1`] = `"Not a Action object"`;

exports[`Action permissions should throw if empty permissions are provided 1`] = `"Action 'example' has one or more empty permission definitions"`;

exports[`Action postProcessor should have a valid postProcessor function if defined 1`] = `"postProcessor of action 'example' needs to be a valid function"`;

exports[`Action postProcessor should pass through postProcessor if it is declared 1`] = `
Object {
  "data": Object {
    "someActionWithPostProcessor": Object {
      "result": Object {
        "value": 123,
      },
    },
  },
}
`;

exports[`Action postProcessor should pass through postProcessor if it is declared 2`] = `
Object {
  "data": Object {
    "someActionWithPostProcessor": Object {
      "result": Object {
        "value": 2468,
      },
    },
  },
}
`;

exports[`Action preProcessor should have a valid preProcessor function if defined 1`] = `"preProcessor of of action 'example' needs to be a valid function"`;

exports[`Action preProcessor should pass through preProcessor if it is declared 1`] = `
Object {
  "data": Object {
    "someActionWithPreProcessor": Object {
      "result": Object {
        "value": 123,
      },
    },
  },
}
`;

exports[`Action preProcessor should pass through preProcessor if it is declared 2`] = `
Object {
  "data": Object {
    "someActionWithPreProcessor": null,
  },
  "errors": Array [
    [GraphQLError: 13 brings bad luck],
  ],
}
`;

exports[`Action should have a description 1`] = `"Missing description for action 'example'"`;

exports[`Action should have a name 1`] = `"Missing action name"`;

exports[`Action should have a valid input definition 1`] = `"Action 'example' has an invalid input definition"`;

exports[`Action should have a valid output definition 1`] = `"Action 'example' has an invalid output definition"`;

exports[`Action should have a valid resolve function 1`] = `"Action 'example' needs a resolve function"`;

exports[`Action should have valid input and output definitions when generated via a function 1`] = `"Input definition function for action 'example' does not return a map"`;

exports[`Action should have valid input and output definitions when generated via a function 2`] = `"Output definition function for action 'example' does not return a map"`;

exports[`Action should have valid input data types 1`] = `"Missing input type for action 'example'"`;

exports[`Action should have valid output data types 1`] = `"Missing output type for action 'example'"`;

exports[`Action should return input and output params 1`] = `
Object {
  "type": ObjectDataType {
    "_attributesMap": Object {
      "about": Object {
        "description": "Just some description",
        "type": [Function],
      },
      "firstName": Object {
        "defaultValue": [Function],
        "description": "First name",
        "type": DataType {
          "description": "Data type representing text values",
          "mock": [Function],
          "name": "DataTypeString",
          "validate": [Function],
        },
      },
      "lastName": Object {
        "description": "Last name",
        "required": true,
        "type": DataType {
          "description": "Data type representing text values",
          "mock": [Function],
          "name": "DataTypeString",
          "validate": [Function],
        },
      },
    },
    "description": "do something",
    "name": "input",
    "validate": [Function],
  },
}
`;

exports[`Action should return input and output params 2`] = `
Object {
  "type": ObjectDataType {
    "_attributesMap": Object {
      "luckyNumber": Object {
        "description": "Lucky number",
        "type": DataType {
          "description": "Data type representing text values",
          "mock": [Function],
          "name": "DataTypeString",
          "validate": [Function],
        },
      },
    },
    "description": "do something",
    "name": "output",
    "validate": [Function],
  },
}
`;

exports[`Action should return input and output params 3`] = `
Object {
  "about": Object {
    "description": "Just some description",
    "name": "about",
    "required": false,
    "type": ObjectDataType {
      "_attributesMap": Object {
        "favouriteActor": Object {
          "description": "One more description",
          "type": DataType {
            "description": "Data type representing text values",
            "mock": [Function],
            "name": "DataTypeString",
            "validate": [Function],
          },
        },
      },
      "description": "Just some description",
      "name": "about",
      "validate": [Function],
    },
  },
  "firstName": Object {
    "defaultValue": [Function],
    "description": "First name",
    "name": "firstName",
    "required": true,
    "type": DataType {
      "description": "Data type representing text values",
      "mock": [Function],
      "name": "DataTypeString",
      "validate": [Function],
    },
  },
  "lastName": Object {
    "description": "Last name",
    "name": "lastName",
    "required": true,
    "type": DataType {
      "description": "Data type representing text values",
      "mock": [Function],
      "name": "DataTypeString",
      "validate": [Function],
    },
  },
}
`;

exports[`Action should return input and output params 4`] = `
Object {
  "favouriteActor": Object {
    "description": "One more description",
    "name": "favouriteActor",
    "required": false,
    "type": DataType {
      "description": "Data type representing text values",
      "mock": [Function],
      "name": "DataTypeString",
      "validate": [Function],
    },
  },
}
`;
